fix: flex-wrap for block containers

--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,8 +1,9 @@
 .block-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
-  width: 1500px;
+  gap: 80px;
 }
 
 .block {
@@ -10,6 +11,7 @@
   flex-direction: column;
   align-items: center;
   width: 700px;
+  margin-bottom: 32px;
 }
 
 .block__title {
