--- a/styles/palette.css
+++ b/styles/palette.css
@@ -32,7 +32,8 @@
 .palette-container {
   display: flex;
   flex-direction: row;
-  width: 1440px;
+  flex-wrap: wrap;
+  gap: 60px;
   justify-content: space-around;
 }
 
